# image-types

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
imtypes/: __init__.py  _types.py
tests/: test_validation.py
